--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -43,7 +43,7 @@
 			transition: color .15s;
 			&:hover {
 				.icon svg {
-					fill: $primary;
+					fill: $blue;
 				}
 			}
 		}
@@ -58,5 +58,87 @@
 		.label {
 			display: none;
 		}
+	}
+}
+
+
+.event-teaser {
+	text-align: left;
+	a {
+		display: block;
+		&:hover {
+			> .inner:after {
+				opacity: 1;
+				transform: none;
+			}
+			.entry-event-date > .inner {
+				border-color: $primary;
+			}
+			.entry-cta {
+				color: $primary;
+			}
+		}
+		> .inner {
+			display: flex;
+			margin: 0 -0.5rem;
+			@include media-breakpoint-up(sm) {
+				padding-right: 3rem;
+				position: relative;
+				&:after {
+					@include icon(map-get($icomoon-icons, arrow-right), icomoon);
+					position: absolute;
+					font-size: 2rem;
+					line-height: 1;
+					right: 0.5rem;
+					top: 50%;
+					margin-top: -1.5rem;
+					opacity: 0;
+					transform: translateX(-0.5rem);
+					transition: opacity 0.15s, transform 0.15s ease-out;
+				}
+			}
+		}
+	}
+	.entry-event-date,
+	.entry-contents {
+		padding: 0 0.5rem;
+	}
+	.entry-event-date {
+		flex: 0 0 10rem;
+		line-height: 1;
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		> .inner {
+			border-bottom: 5px solid rgba($primary, 0.5);
+			transition: border-color .15s;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding-bottom: 0.5rem;
+		}
+		.month {
+			font-size: 1.375rem;
+			text-transform: uppercase;
+			font-weight: 600;
+			margin-right: 0.5rem;
+		}
+		.date {
+			font-size: 3.125rem;
+			font-weight: 700;
+			font-family: $font-family-sans-serif-alt;
+		}
+	}
+	.entry-contents {
+		flex: 1 1 auto;
+	}
+	.entry-title {
+		font-size: 1.75rem;
+		font-weight: 500;
+		margin-bottom: 0.5rem;
+	}
+	.entry-cta {
+		color: rgba($dark, .8);
+		transition: color .15s;
 	}
 }
