--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
@@ -6,6 +6,8 @@
 		border: none;
 		padding: add($input-padding-y, $input-border-width) add($input-padding-x, -.25rem);
 		box-shadow: inset 0 -2px $primary;
+		padding-left: 0;
+		padding-right: 0;
 		&:focus {
 			box-shadow: inset 0 -2px $secondary;
 		}
