--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
@@ -1,7 +1,34 @@
 
 #header {
-	background-color: #eee;
-	position: relative;
+	background-color: transparent;
+	position: sticky;
+	top: 0;
+	z-index: 500;
+	transition: opacity .4s, transform .4s ease-out, background-color .4s, box-shadow .4s, visibility 0s;
+	opacity: 0;
+	transform: translateY(-10px);
+	&.loaded {
+		opacity: 1;
+		transform: none;
+	}
+	&.is-sticky {
+		background-color: #fff;
+		box-shadow: 0 2px 6px fade-out(#000000, .8);
+		&.is-minified {
+			opacity: 0;
+			visibility: hidden;
+			transform: translateY(-30px);
+			transition: opacity .4s .4s, transform .4s .4s ease-out, background-color .4s, box-shadow .4s, visibility 0s .8s;
+		}
+	}
+	body.admin-bar & {
+		@media (min-width: 601px) {
+			top: 46px;
+		}
+		@media (min-width: 783px) {
+			top: 32px;
+		}
+	}
 	> .inner {
 		> .container {
 			// max-width: 100%;
@@ -26,6 +53,7 @@
 }
 
 
+
 /*	Site Announcement
 ---------------------------------------------------------*/
 
@@ -36,11 +64,19 @@
 	display: none;
 	text-transform: uppercase;
 	letter-spacing: .05em;
+	// opacity: 0;
+	margin-top: auto;
+	transition: opacity .2s, margin-top .2s ease-out;
 	@include media-breakpoint-up(md) {
 		font-size: 1.375rem;
 	}
 	&.active {
 		display: block;
+	}
+	&.shown {
+		opacity: 1;
+		transform: none;
+		margin-top: 0 !important;
 	}
 	&.text-color-light {
 		color: #fff;
@@ -146,6 +182,7 @@
 	font-size: 0.875rem;
 	order: -1;
 	height: 30px;
+	background-color: transparent;
 	@include media-breakpoint-up(md) {
 		display: none;
 	}
@@ -175,12 +212,32 @@
 			transition: transform .2s ease-out;
 		}
 	}
+	#header.text-color-light & {
+		.icon {
+			background-color: $white;
+			box-shadow: 0 8px 0 $white, 0 -8px 0 $white;
+			&:before,
+			&:after {
+				background-color: $white;
+			}
+		}
+	}
+	#header.is-sticky & {
+		.icon {
+			background-color: $dark-blue;
+			box-shadow: 0 8px 0 $dark-blue, 0 -8px 0 $dark-blue;
+			&:before,
+			&:after {
+				background-color: $dark-blue;
+			}
+		}
+	}
 }
 body.mobile-menu-active {
 	#mobile-menu-toggle {
 		.icon {
-			box-shadow: 0 0px 0 transparent, 0 -0px 0 transparent;
-			background-color: transparent;
+			box-shadow: 0 0px 0 transparent, 0 -0px 0 transparent !important;
+			background-color: transparent !important;
 			transition-delay: 0s;
 			&:before { transform: rotate(-45deg); }
 			&:after { transform: rotate(45deg); }
@@ -197,24 +254,36 @@ body.mobile-menu-active {
 	margin-left: 1rem;
 	display: flex;
 	justify-content: flex-end;
+	position: relative;
 	@include media-breakpoint-up(md) {
-		flex: 0 0 150px;
 		margin-left: 0;
 		margin-right: 1rem;
-		display: block;
+		justify-content: flex-start;
 	}
 	@include media-breakpoint-up(lg) {
 		margin-right: 2rem;
-		flex: 0 0 225px;
 	}
 }
-#site-title {
+#site-logo {
 	width: 120px;
+	display: flex;
+	align-items: center;
+	transition: opacity .2s, visibility 0s, transform .2s ease-out;
 	@include media-breakpoint-up(md) {
-		width: 100%;
+		width: 150px;
+	}
+	@include media-breakpoint-up(lg) {
+		width: 225px;
+	}
+	#header.is-sticky & {
+		opacity: 0;
+		visibility: hidden;
+		transform: translateY(-10px);
+		transition: opacity .2s, visibility 0s .2s, transform .2s ease-out;
 	}
 	a {
 		display: block;
+		width: 100%;
 		padding-top: 40%;
 		height: 0;
 		overflow: hidden;
@@ -223,6 +292,62 @@ body.mobile-menu-active {
 		background-repeat: no-repeat;
 		background-size: contain;
 		background-position: left center;
+	}
+}
+#site-title {
+	position: absolute;
+	left: 0;
+	right: 0;
+	text-align: right;
+	top: 0;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	line-height: $line-height-sm;
+	transition: opacity .2s, visibility 0s .2s, transform .2s ease-out;
+	opacity: 0;
+	visibility: hidden;
+	transform: translateY(10px);
+	justify-content: flex-end;
+	@include media-breakpoint-up(md) {
+		text-align: left;
+		justify-content: flex-start;
+	}
+	#header.is-sticky & {
+		opacity: 1;
+		visibility: visible;
+		transform: none;
+		transition-delay: 0s;
+	}
+	a {
+		display: block;
+	}
+	.title {
+		text-transform: uppercase;
+		font-weight: 700;
+		font-size: 0.875rem;
+		letter-spacing: .1em;
+		color: $primary;
+		margin-bottom: 0.2rem;
+		@include media-breakpoint-up(lg) {
+			font-size: 1.25rem;
+		}
+		@include media-breakpoint-up(xl) {
+			font-size: 1.625rem;
+		}
+	}
+	.tagline {
+		text-transform: uppercase;
+		color: mix($primary, #fff, 60%);
+		font-style: italic;
+		letter-spacing: .1em;
+		font-size: 0.625rem;
+		@include media-breakpoint-up(lg) {
+			font-size: 0.875rem;
+		}
+		@include media-breakpoint-up(xl) {
+			font-size: 1.125rem;
+		}
 	}
 }
 
@@ -264,6 +389,15 @@ body.mobile-menu-active {
 			border-width: 4px;
 			padding: calc(#{$btn-padding-y-lg} - (4px - #{$btn-border-width})) calc(#{$btn-padding-x-lg} - (4px - #{$btn-border-width}));
 		}
+		#header.text-color-light & {
+			color: #fff;
+		}
+		#header.is-sticky & {
+			color: $red;
+			@include hover() {
+				color: #fff;
+			}
+		}
 	}
 }
 
@@ -273,7 +407,7 @@ body.mobile-menu-active {
 
 #header-primary-navigation {
 	display: none;
-	flex: 1 1 auto;
+	flex: 0 1 auto;
 	margin-top: -10px;
 	margin-bottom: -10px;
 	align-self: stretch;
@@ -285,46 +419,56 @@ body.mobile-menu-active {
 		margin-top: -20px;
 		margin-bottom: -20px;
 	}
+}
+#header-primary-navigation-menu {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	line-height: $line-height-sm;
+	font-size: 0.875rem;
+	display: flex;
+	font-weight: 700;
+	margin: 0 -0.5rem;
+	@include media-breakpoint-up(lg) {
+		margin: 0 -1rem;
+		font-size: 1.25rem;
+	}
 	ul {
 		list-style: none;
 		margin: 0;
 		padding: 0;
 	}
-	.menu {
-		line-height: $line-height-sm;
-		font-size: 0.875rem;
+	a {
+		color: $dark-blue;
+		transition: color .15s;
+		&:hover {
+			color: $dark-blue;
+		}
+	}
+	> .menu-item {
+		position: relative;
 		display: flex;
-		font-weight: 700;
-		margin: 0 -0.5rem;
-		@include media-breakpoint-up(lg) {
-			margin: 0 -1rem;
-			font-size: 1.25rem;
+		&.mega-menu-item {
+			position: static;
 		}
-		.menu-item {
-			position: relative;
-			display: flex;
-			&.mega-menu-item {
-				position: static;
-			}
-			&:hover,
-			&.active {
-				> a {
-					color: $dark-blue;
-					.label:after {
-						opacity: 1;
-					}
-				}
-			}
-			&.active {
-				> .sub-menu {
+		&:hover,
+		&.active {
+			> a {
+				color: $dark-blue;
+				.label:after {
 					opacity: 1;
-					visibility: visible;
-					transition-delay: 0s;
-					transform: none;
 				}
 			}
 		}
-		a {
+		&.active {
+			> .sub-menu {
+				opacity: 1;
+				visibility: visible;
+				transition-delay: 0s;
+				transform: none;
+			}
+		}
+		> a {
 			color: $dark-blue;
 			display: flex;
 			justify-content: center;
@@ -335,6 +479,12 @@ body.mobile-menu-active {
 			cursor: pointer;
 			@include media-breakpoint-up(lg) {
 				padding: 0.5rem 1rem;
+			}
+			#header.text-color-light & {
+				color: #fff;
+			}
+			#header.is-sticky & {
+				color: $dark-blue;
 			}
 			.label {
 				padding: 0.3rem 0;
@@ -351,7 +501,13 @@ body.mobile-menu-active {
 					bottom: 0;
 					width: 100%;
 					opacity: 0;
-					transition: opacity .15s;
+					transition: opacity .15s, border-color .2s;
+					#header.text-color-light & {
+						border-color: #fff;
+					}
+					#header.is-sticky & {
+						border-color: $dark-blue;
+					}
 					@include media-breakpoint-up(lg) {
 						border-top-width: 4px;
 					}
@@ -438,9 +594,20 @@ body.mobile-menu-active {
 		@include media-breakpoint-up(lg) {
 			top: calc(100% + 20px);
 		}
+		&.events {
+			.sub-menu-section.secondary {
+				@include media-breakpoint-up(xl) {
+					flex: 0 0 percentage(1 / 4);
+				}
+			}
+		}
 		> .inner {
 			display: flex;
 			width: 100%;
+		}
+		a {
+			padding: 0;
+			display: inline;
 		}
 		.sub-menu-section {
 			flex: 1 1 auto;
@@ -519,6 +686,7 @@ body.mobile-menu-active {
 				a {
 					padding: 0;
 					color: rgba($dark, .8);
+					display: block;
 					&:hover {
 						color: $primary;
 					}
@@ -538,6 +706,28 @@ body.mobile-menu-active {
 			}
 			+ .sub-menu-cta-links {
 				margin-top: 2rem;
+			}
+		}
+		.sub-menu-events {
+			display: flex;
+			flex-wrap: wrap;
+			margin: 0 -1rem -1rem;
+			.event-container {
+				margin-bottom: 1rem;
+				padding: 0 1rem;
+				width: 100%;
+				@include media-breakpoint-up(xl) {
+					width: 50%;
+				}
+			}
+			.event-teaser {
+				a {
+					display: block;
+				}
+				.entry-title {
+					font-weight: 500;
+					margin-bottom: 0.5rem;
+				}
 			}
 		}
 		.sub-menu-cta-links {
