Updating container block

--- a/wp-content/plugins/crown-blocks/src/block-container/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-container/style.scss
@@ -19,42 +19,52 @@ $spacer: 1rem;
 	&.contents-mw-5 > .inner > .container-contents > .inner { max-width: 1080px !important; }
 	&.contents-mw-6 > .inner > .container-contents > .inner { max-width: 1260px !important; }
 
-	@for $i from 0 through 20 {
-		&.contents-pt-#{$i} > .inner > .container-contents { padding-top: $spacer * $i !important; }
-		&.contents-pb-#{$i} > .inner > .container-contents { padding-bottom: $spacer * $i !important; }
-		&.contents-px-#{$i} > .inner > .container-contents { padding-left: $spacer * $i !important; padding-right: $spacer * $i !important; }
-		&.contents-ox-#{$i} { margin-left: -$spacer * $i !important; margin-right: -$spacer * $i !important; }
+	@for $i from 0 through 40 {
+		&.contents-pt-#{$i} > .inner > .container-contents { padding-top: ($spacer / 2) * $i !important; }
+		&.contents-pb-#{$i} > .inner > .container-contents { padding-bottom: ($spacer / 2) * $i !important; }
+		&.contents-px-#{$i} > .inner > .container-contents { padding-left: ($spacer / 2) * $i !important; padding-right: ($spacer / 2) * $i !important; }
+		&.contents-ot-#{$i} > .inner > .container-contents { padding-top: 0 !important; margin-top: (-$spacer / 2) * $i !important; }
+		&.contents-ob-#{$i} > .inner > .container-contents { padding-bottom: 0 !important; margin-bottom: (-$spacer / 2) * $i !important; }
+		&.contents-ox-#{$i} > .inner > .container-contents { padding-left: 0 !important; padding-right: 0 !important; margin-left: (-$spacer / 2) * $i !important; margin-right: (-$spacer / 2) * $i !important; max-width: calc(100% + #{($spacer * $i)}) !important; }
 	}
 	@media (min-width: 576px) {
-		@for $i from 0 through 20 {
-			&.contents-pt-sm-#{$i} > .inner > .container-contents { padding-top: $spacer * $i !important; }
-			&.contents-pb-sm-#{$i} > .inner > .container-contents { padding-bottom: $spacer * $i !important; }
-			&.contents-px-sm-#{$i} > .inner > .container-contents { padding-left: $spacer * $i !important; padding-right: $spacer * $i !important; }
-			&.contents-ox-sm-#{$i} { margin-left: -$spacer * $i !important; margin-right: -$spacer * $i !important; }
+		@for $i from 0 through 40 {
+			&.contents-pt-sm-#{$i} > .inner > .container-contents { padding-top: ($spacer / 2) * $i !important; }
+			&.contents-pb-sm-#{$i} > .inner > .container-contents { padding-bottom: ($spacer / 2) * $i !important; }
+			&.contents-px-sm-#{$i} > .inner > .container-contents { padding-left: ($spacer / 2) * $i !important; padding-right: ($spacer / 2) * $i !important; }
+			&.contents-ot-sm-#{$i} > .inner > .container-contents { padding-top: 0 !important; margin-top: (-$spacer / 2) * $i !important; }
+			&.contents-ob-sm-#{$i} > .inner > .container-contents { padding-bottom: 0 !important; margin-bottom: (-$spacer / 2) * $i !important; }
+			&.contents-ox-sm-#{$i} > .inner > .container-contents { padding-left: 0 !important; padding-right: 0 !important; margin-left: (-$spacer / 2) * $i !important; margin-right: (-$spacer / 2) * $i !important; max-width: calc(100% + #{($spacer * $i)}) !important; }
 		}
 	}
 	@media (min-width: 768px) {
-		@for $i from 0 through 20 {
-			&.contents-pt-md-#{$i} > .inner > .container-contents { padding-top: $spacer * $i !important; }
-			&.contents-pb-md-#{$i} > .inner > .container-contents { padding-bottom: $spacer * $i !important; }
-			&.contents-px-md-#{$i} > .inner > .container-contents { padding-left: $spacer * $i !important; padding-right: $spacer * $i !important; }
-			&.contents-ox-md-#{$i} { margin-left: -$spacer * $i !important; margin-right: -$spacer * $i !important; }
+		@for $i from 0 through 40 {
+			&.contents-pt-md-#{$i} > .inner > .container-contents { padding-top: ($spacer / 2) * $i !important; }
+			&.contents-pb-md-#{$i} > .inner > .container-contents { padding-bottom: ($spacer / 2) * $i !important; }
+			&.contents-px-md-#{$i} > .inner > .container-contents { padding-left: ($spacer / 2) * $i !important; padding-right: ($spacer / 2) * $i !important; }
+			&.contents-ot-md-#{$i} > .inner > .container-contents { padding-top: 0 !important; margin-top: (-$spacer / 2) * $i !important; }
+			&.contents-ob-md-#{$i} > .inner > .container-contents { padding-bottom: 0 !important; margin-bottom: (-$spacer / 2) * $i !important; }
+			&.contents-ox-md-#{$i} > .inner > .container-contents { padding-left: 0 !important; padding-right: 0 !important; margin-left: (-$spacer / 2) * $i !important; margin-right: (-$spacer / 2) * $i !important; max-width: calc(100% + #{($spacer * $i)}) !important; }
 		}
 	}
 	@media (min-width: 992px) {
-		@for $i from 0 through 20 {
-			&.contents-pt-lg-#{$i} > .inner > .container-contents { padding-top: $spacer * $i !important; }
-			&.contents-pb-lg-#{$i} > .inner > .container-contents { padding-bottom: $spacer * $i !important; }
-			&.contents-px-lg-#{$i} > .inner > .container-contents { padding-left: $spacer * $i !important; padding-right: $spacer * $i !important; }
-			&.contents-ox-lg-#{$i} { margin-left: -$spacer * $i !important; margin-right: -$spacer * $i !important; }
+		@for $i from 0 through 40 {
+			&.contents-pt-lg-#{$i} > .inner > .container-contents { padding-top: ($spacer / 2) * $i !important; }
+			&.contents-pb-lg-#{$i} > .inner > .container-contents { padding-bottom: ($spacer / 2) * $i !important; }
+			&.contents-px-lg-#{$i} > .inner > .container-contents { padding-left: ($spacer / 2) * $i !important; padding-right: ($spacer / 2) * $i !important; }
+			&.contents-ot-lg-#{$i} > .inner > .container-contents { padding-top: 0 !important; margin-top: (-$spacer / 2) * $i !important; }
+			&.contents-ob-lg-#{$i} > .inner > .container-contents { padding-bottom: 0 !important; margin-bottom: (-$spacer / 2) * $i !important; }
+			&.contents-ox-lg-#{$i} > .inner > .container-contents { padding-left: 0 !important; padding-right: 0 !important; margin-left: (-$spacer / 2) * $i !important; margin-right: (-$spacer / 2) * $i !important; max-width: calc(100% + #{($spacer * $i)}) !important; }
 		}
 	}
 	@media (min-width: 1200px) {
-		@for $i from 0 through 20 {
-			&.contents-pt-xl-#{$i} > .inner > .container-contents { padding-top: $spacer * $i !important; }
-			&.contents-pb-xl-#{$i} > .inner > .container-contents { padding-bottom: $spacer * $i !important; }
-			&.contents-px-xl-#{$i} > .inner > .container-contents { padding-left: $spacer * $i !important; padding-right: $spacer * $i !important; }
-			&.contents-ox-xl-#{$i} { margin-left: -$spacer * $i !important; margin-right: -$spacer * $i !important; }
+		@for $i from 0 through 40 {
+			&.contents-pt-xl-#{$i} > .inner > .container-contents { padding-top: ($spacer / 2) * $i !important; }
+			&.contents-pb-xl-#{$i} > .inner > .container-contents { padding-bottom: ($spacer / 2) * $i !important; }
+			&.contents-px-xl-#{$i} > .inner > .container-contents { padding-left: ($spacer / 2) * $i !important; padding-right: ($spacer / 2) * $i !important; }
+			&.contents-ot-xl-#{$i} > .inner > .container-contents { padding-top: 0 !important; margin-top: (-$spacer / 2) * $i !important; }
+			&.contents-ob-xl-#{$i} > .inner > .container-contents { padding-bottom: 0 !important; margin-bottom: (-$spacer / 2) * $i !important; }
+			&.contents-ox-xl-#{$i} > .inner > .container-contents { padding-left: 0 !important; padding-right: 0 !important; margin-left: (-$spacer / 2) * $i !important; margin-right: (-$spacer / 2) * $i !important; max-width: calc(100% + #{($spacer * $i)}) !important; }
 		}
 	}
 
@@ -75,33 +85,10 @@ $spacer: 1rem;
 			background-position: center;
 			background-size: cover;
 		}
-		.wave-top,
-		.wave-bottom {
-			position: absolute;
-			left: 0;
-			width: 100%;
-			height: auto;
-			display: none;
-		}
-		.wave-top {
-			top: -.5px;
-		}
-		.wave-bottom {
-			bottom: -.5px;
-		}
 	}
 
 	&.has-drop-shadow {
 		box-shadow: 0 2px 10px rgba(0, 0, 0, .1);
-	}
-
-	&.bg-wave-top {
-		> .container-bg .wave-top { display: block; }
-		> .inner { padding-top: percentage(130 / 1440); }
-	}
-	&.bg-wave-bottom {
-		> .container-bg .wave-bottom { display: block; }
-		> .inner { padding-bottom: percentage(130 / 1440); }
 	}
 
 	> .inner {
