--- a/wp-content/plugins/crown-blocks/src/block-container/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-container/editor.scss
@@ -1,10 +1,9 @@
 
 
+.wp-block[data-type="crown-blocks/container"],
 .block-editor-block-list__block[data-type="crown-blocks/container"] {
-	> .wp-block[data-align="full"] {
-		.wp-block {
-			max-width: none;
-		}
+	.wp-block {
+		max-width: none;
 	}
 }
 
