Updating multi-column blocks

--- a/wp-content/plugins/crown-blocks/src/block-column/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-column/style.scss
@@ -4,6 +4,7 @@ $spacer: 1rem;
 .wp-block-crown-blocks-column {
 	display: flex;
 
+	&.vertical-alignment-top { align-items: flex-start; }
 	&.vertical-alignment-center { align-items: center; }
 	&.vertical-alignment-bottom { align-items: flex-end; }
 	> .inner {
