Fixing container block class

--- a/wp-content/plugins/crown-blocks/src/block-grid/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-grid/editor.scss
@@ -1,6 +1,12 @@
 
 
 .editor-styles-wrapper .wp-block[data-type="crown-blocks/grid"] {
+	&.is-selected,
+	&.has-child-selected {
+		> .crown-block-editor-container > .wp-block-crown-blocks-grid > .inner > .grid-columns > .inner > .block-editor-inner-blocks > .block-editor-block-list__layout > .block-list-appender {
+			display: flex;
+		}
+	}
 	> .crown-block-editor-container > .wp-block-crown-blocks-grid {
 		
 		> .inner > .grid-columns {
@@ -12,15 +18,37 @@
 					> .block-editor-block-list__layout {
 						display: flex;
 						flex-wrap: wrap;
-						margin-left: -30px;
-						margin-bottom: -30px;
+						margin-left: -2rem;
+						margin-bottom: -2rem;
 						> .wp-block,
 						> .block-list-appender {
 							margin: 0;
 							flex: 0 0 percentage(1);
 							min-width: 0;
-							padding-left: 30px;
-							padding-bottom: 30px;
+							padding-left: 2rem;
+							padding-bottom: 2rem;
+						}
+						> .wp-block {
+							&:after {
+								left: calc(2rem + 1px);
+								bottom: calc(2rem + 1px);
+							}
+						}
+						> .block-list-appender {
+							display: none;
+							.block-editor-button-block-appender.block-list-appender__toggle {
+								margin: 0;
+								width: 100%;
+								height: auto;
+								min-height: 100px;
+								border-radius: 1px;
+								box-shadow: 0 0 0 1.5px rgba(#007cba, 0.4);
+								transition: background-color .2s, box-shadow .2s;
+								&:hover {
+									box-shadow: 0 0 0 1.5px #007cba;
+									background-color: rgba(#007cba, .2);
+								}
+							}
 						}
 					}
 				}
@@ -39,64 +67,74 @@
 		&.cell-horizontal-align-right #{$column-container-selector} { justify-content: flex-end; }
 
 		&.column-breakpoint-xs {
-			@for $i from 1 through 12 {
+			@for $i from 1 through 6 {
 				&.column-count-xs-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
+				&.column-count-xs-#{$i} #{$column-container-selector} > .block-list-appender { flex: 0 0 percentage(1 / $i); }
 			}
-			@for $i from 0 through 12 {
-				&.column-spacing-xs-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-				&.column-spacing-xs-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
-				&.column-spacing-xs-#{($i * 10)} #{$column-container-selector} > .block-list-appender { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+			@for $i from 0 through 16 {
+				&.column-spacing-xs-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+				&.column-spacing-xs-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
+				&.column-spacing-xs-#{$i} #{$column-cell-selector}:after { left: calc(#{$i} * 1rem + 1px); bottom: calc(#{$i} * 1rem + 1px); }
+				&.column-spacing-xs-#{$i} #{$column-container-selector} > .block-list-appender { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 			}
 		}
 		
 		@media (min-width: 576px) {
 			&.column-breakpoint-xs, &.column-breakpoint-sm {
-				@for $i from 1 through 12 {
+				@for $i from 1 through 6 {
 					&.column-count-sm-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
+					&.column-count-sm-#{$i} #{$column-container-selector} > .block-list-appender { flex: 0 0 percentage(1 / $i); }
 				}
-				@for $i from 0 through 12 {
-					&.column-spacing-sm-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-					&.column-spacing-sm-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
-					&.column-spacing-sm-#{($i * 10)} #{$column-container-selector} > .block-list-appender { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+				@for $i from 0 through 16 {
+					&.column-spacing-sm-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+					&.column-spacing-sm-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
+					&.column-spacing-sm-#{$i} #{$column-cell-selector}:after { left: calc(#{$i} * 1rem + 1px); bottom: calc(#{$i} * 1rem + 1px); }
+					&.column-spacing-sm-#{$i} #{$column-container-selector} > .block-list-appender { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 				}
 			}
 		}
 	
 		@media (min-width: 768px) {
 			&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md {
-				@for $i from 1 through 12 {
+				@for $i from 1 through 6 {
 					&.column-count-md-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
+					&.column-count-md-#{$i} #{$column-container-selector} > .block-list-appender { flex: 0 0 percentage(1 / $i); }
 				}
-				@for $i from 0 through 12 {
-					&.column-spacing-md-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-					&.column-spacing-md-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
-					&.column-spacing-md-#{($i * 10)} #{$column-container-selector} > .block-list-appender { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+				@for $i from 0 through 16 {
+					&.column-spacing-md-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+					&.column-spacing-md-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
+					&.column-spacing-md-#{$i} #{$column-cell-selector}:after { left: calc(#{$i} * 1rem + 1px); bottom: calc(#{$i} * 1rem + 1px); }
+					&.column-spacing-md-#{$i} #{$column-container-selector} > .block-list-appender { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 				}
 			}
 		}
 	
 		@media (min-width: 992px) {
 			&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md, &.column-breakpoint-lg {
-				@for $i from 1 through 12 {
+				@for $i from 1 through 6 {
 					&.column-count-lg-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
+					&.column-count-lg-#{$i} #{$column-container-selector} > .block-list-appender { flex: 0 0 percentage(1 / $i); }
 				}
-				@for $i from 0 through 12 {
-					&.column-spacing-lg-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-					&.column-spacing-lg-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
-					&.column-spacing-lg-#{($i * 10)} #{$column-container-selector} > .block-list-appender { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+				@for $i from 0 through 16 {
+					&.column-spacing-lg-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+					&.column-spacing-lg-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
+					&.column-spacing-lg-#{$i} #{$column-cell-selector}:after { left: calc(#{$i} * 1rem + 1px); bottom: calc(#{$i} * 1rem + 1px); }
+					&.column-spacing-lg-#{$i} #{$column-container-selector} > .block-list-appender { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 				}
 			}
 		}
 	
 		@media (min-width: 1200px) {
 			&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md, &.column-breakpoint-lg, &.column-breakpoint-xl {
-				@for $i from 1 through 12 {
+				@for $i from 1 through 6 {
 					&.column-count-xl-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
+					&.column-count-xl-#{$i} #{$column-container-selector} > .block-list-appender { flex: 0 0 percentage(1 / $i); }
 				}
-				@for $i from 0 through 12 {
-					&.column-spacing-xl-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-					&.column-spacing-xl-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
-					&.column-spacing-xl-#{($i * 10)} #{$column-container-selector} > .block-list-appender { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+				@for $i from 0 through 16 {
+					&.column-spacing-xl-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+					&.column-spacing-xl-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
+					&.column-spacing-xl-#{$i} #{$column-cell-selector}:after { left: calc(#{$i} * 1rem + 1px); bottom: calc(#{$i} * 1rem + 1px); }
+					&.column-spacing-xl-#{$i} #{$column-container-selector} > .block-list-appender { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 				}
 			}
 		}
