--- a/wp-content/plugins/crown-blocks/src/block-grid/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-grid/style.scss
@@ -5,13 +5,13 @@
 	> .inner > .grid-columns > .inner {
 		display: flex;
 		flex-wrap: wrap;
-		margin-left: -30px;
-		margin-bottom: -30px;
+		margin-left: -2rem;
+		margin-bottom: -2rem;
 		> .wp-block-crown-blocks-grid-cell {
 			flex: 0 0 percentage(1);
 			min-width: 0;
-			padding-left: 30px;
-			padding-bottom: 30px;
+			padding-left: 2rem;
+			padding-bottom: 2rem;
 		}
 	}
 	
@@ -27,59 +27,59 @@
 	&.cell-horizontal-align-right #{$column-container-selector} { justify-content: flex-end; }
 
 	&.column-breakpoint-xs {
-		@for $i from 1 through 12 {
+		@for $i from 1 through 6 {
 			&.column-count-xs-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
 		}
-		@for $i from 0 through 12 {
-			&.column-spacing-xs-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-			&.column-spacing-xs-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+		@for $i from 0 through 16 {
+			&.column-spacing-xs-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+			&.column-spacing-xs-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 		}
 	}
 	
 	@media (min-width: 576px) {
 		&.column-breakpoint-xs, &.column-breakpoint-sm {
-			@for $i from 1 through 12 {
+			@for $i from 1 through 6 {
 				&.column-count-sm-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
 			}
-			@for $i from 0 through 12 {
-				&.column-spacing-sm-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-				&.column-spacing-sm-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+			@for $i from 0 through 16 {
+				&.column-spacing-sm-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+				&.column-spacing-sm-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 			}
 		}
 	}
 
 	@media (min-width: 768px) {
 		&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md {
-			@for $i from 1 through 12 {
+			@for $i from 1 through 6 {
 				&.column-count-md-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
 			}
-			@for $i from 0 through 12 {
-				&.column-spacing-md-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-				&.column-spacing-md-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+			@for $i from 0 through 16 {
+				&.column-spacing-md-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+				&.column-spacing-md-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 			}
 		}
 	}
 
 	@media (min-width: 992px) {
 		&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md, &.column-breakpoint-lg {
-			@for $i from 1 through 12 {
+			@for $i from 1 through 6 {
 				&.column-count-lg-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
 			}
-			@for $i from 0 through 12 {
-				&.column-spacing-lg-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-				&.column-spacing-lg-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+			@for $i from 0 through 16 {
+				&.column-spacing-lg-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+				&.column-spacing-lg-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 			}
 		}
 	}
 
 	@media (min-width: 1200px) {
 		&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md, &.column-breakpoint-lg, &.column-breakpoint-xl {
-			@for $i from 1 through 12 {
+			@for $i from 1 through 6 {
 				&.column-count-xl-#{$i} #{$column-cell-selector} { flex: 0 0 percentage(1 / $i); }
 			}
-			@for $i from 0 through 12 {
-				&.column-spacing-xl-#{($i * 10)} #{$column-container-selector} { margin-left: $i * -10px; margin-bottom: $i * -10px; }
-				&.column-spacing-xl-#{($i * 10)} #{$column-cell-selector} { padding-left: $i * 10px; padding-bottom: $i * 10px; }
+			@for $i from 0 through 16 {
+				&.column-spacing-xl-#{$i} #{$column-container-selector} { margin-left: $i * -1rem; margin-bottom: $i * -1rem; }
+				&.column-spacing-xl-#{$i} #{$column-cell-selector} { padding-left: $i * 1rem; padding-bottom: $i * 1rem; }
 			}
 		}
 	}
